objects/POA_Piece__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF (
    isnull ( Appeal__c ),
    Account__r.Name,
    Appeal__r.Account__c
)</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Only necessary if there is no Appeal.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appeal Pieces</relationshipLabel>
        <relationshipName>Appeal_Pieces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Letter_Sent__c</fullName>
        <label>? - Acknowledgement Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Links_Removed_Date__c</fullName>
        <inlineHelpText>All live, VinManagerSite, and 301 redirect links removed</inlineHelpText>
        <label>1 - All Links Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Billing_Account_Number__c</fullName>
        <label>Alternate Billing Account Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appeal</label>
        <referenceTo>Appeal__c</referenceTo>
        <relationshipName>POA_Pieces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Line_Items_Removed__c</fullName>
        <label>2 - Billing Line Items Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Project_Piece__c</fullName>
        <inlineHelpText>Only needed if the service is still being set up.</inlineHelpText>
        <label>3 - Cancel Project Piece</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Canceled_Products__c</fullName>
        <label>Canceled Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chat_and_Mobile_Deactivated_Date__c</fullName>
        <label>2 - Chat and Mobile Deactivated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Third_Party_Vendors_Date__c</fullName>
        <label>3 - Contact Third Party Vendors</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disable_Exports_Date__c</fullName>
        <label>Disable Exports Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disable_Exports__c</fullName>
        <label>2 - Disable Exports</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disable_Imports_Date__c</fullName>
        <label>Disable Imports Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disable_Imports__c</fullName>
        <label>1 - Disable Imports</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disconnect_from_Sendible_Date__c</fullName>
        <label>1 - Disconnect from Sendible</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Give_LastPass_Info_to_Dealer_Date__c</fullName>
        <label>2 - Give LastPass Info to Dealer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Haystak_Notified_Date__c</fullName>
        <label>Haystak Notified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Service__c</fullName>
        <label>Last Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POA_Piece_Stage__c</fullName>
        <label>Appeal Piece Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POA_Piece_Type__c</fullName>
        <label>Piece Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM/SMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POA_Subtype__c</fullName>
        <formula>TEXT(POA__r.POA_Subtype__c)</formula>
        <label>POA Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipName>POA_Pieces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress_Notes__c</fullName>
        <label>Progress Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Pieces_Canceled_Date__c</fullName>
        <label>Project Pieces Canceled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Pieces_Canceled__c</fullName>
        <inlineHelpText>Website, SEO, and Chat pieces must all be canceled as able.</inlineHelpText>
        <label>4 - Project Pieces Canceled</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Parties_Contacted__c</fullName>
        <label>1 - Third Parties Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Users_Removed_from_Motosnap_Date__c</fullName>
        <label>Admin Access Removed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Users_Removed_from_Motosnap__c</fullName>
        <label>3 - Admin Access Removed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_Production_Canceled_Set_Web_Company__c</fullName>
        <label>5 - Production Canceled, Set Web Company</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X6_Haystak_Notified__c</fullName>
        <label>6 - Haystak Notified</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Appeal Piece</label>
    <nameField>
        <label>Appeal Piece Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appeal Pieces</pluralLabel>
    <recordTypes>
        <fullName>Accounting</fullName>
        <active>true</active>
        <label>Accounting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integration</fullName>
        <active>true</active>
        <label>Integration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social</fullName>
        <active>true</active>
        <label>Social</label>
    </recordTypes>
    <recordTypes>
        <fullName>Websites</fullName>
        <active>true</active>
        <label>Websites</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Complete_without_Milestones_ACC</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(POA_Piece_Stage__c, &quot;Completed&quot;) &amp;&amp;
RecordType.Name = &quot;Accounting&quot; &amp;&amp; 
OR(
   ISBLANK(Third_Parties_Contacted__c),
   ISBLANK(Billing_Line_Items_Removed__c),
   ISBLANK(Canceled_Products__c),
   ISBLANK(Last_Date_of_Service__c)
)</errorConditionFormula>
        <errorMessage>You must fill in all milestones prior to Completing this piece. Canceled Products and Last Date of Service are also required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Complete_without_Milestones_INT</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(POA_Piece_Stage__c, &quot;Completed&quot;) &amp;&amp;
RecordType.Name = &quot;Integration&quot; &amp;&amp; 
OR(
   ISPICKVAL(Disable_Imports__c, &quot;No&quot;),
   ISPICKVAL(Disable_Exports__c, &quot;No&quot;),
   ISBLANK(Contact_Third_Party_Vendors_Date__c),
   ISBLANK(Canceled_Products__c),
   ISBLANK(Last_Date_of_Service__c)
)</errorConditionFormula>
        <errorMessage>You must fill in all milestones prior to Completing this piece. Canceled Products and Last Date of Service are also required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Complete_without_Milestones_SOC</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(POA_Piece_Stage__c, &quot;Completed&quot;) &amp;&amp;
RecordType.Name = &quot;Social&quot; &amp;&amp; 
OR(
   ISBLANK(Disconnect_from_Sendible_Date__c),
   ISBLANK(Give_LastPass_Info_to_Dealer_Date__c),
   ISPICKVAL(Cancel_Project_Piece__c, &quot;No&quot;),
   ISBLANK(Canceled_Products__c),
   ISBLANK(Last_Date_of_Service__c)
)</errorConditionFormula>
        <errorMessage>You must fill in all milestones prior to Completing this piece. Canceled Products and Last Date of Service are also required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Complete_without_Milestones_WEB</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(POA_Piece_Stage__c, &quot;Completed&quot;) &amp;&amp;
RecordType.Name = &quot;Websites&quot; &amp;&amp; 
OR(
   ISBLANK(All_Links_Removed_Date__c),
   ISBLANK(Chat_and_Mobile_Deactivated_Date__c),
   ISPICKVAL(Users_Removed_from_Motosnap__c, &quot;No&quot;),
   ISPICKVAL(Project_Pieces_Canceled__c, &quot;No&quot;),
   ISBLANK(Canceled_Products__c),
   ISBLANK(Last_Date_of_Service__c)
)</errorConditionFormula>
        <errorMessage>You must fill in all milestones prior to Completing this piece. Canceled Products and Last Date of Service are also required.</errorMessage>
    </validationRules>
</CustomObject>